--- a/Gridy/View/Base.lproj/Main.storyboard
+++ b/Gridy/View/Base.lproj/Main.storyboard
@@ -293,14 +293,14 @@ zoom, rotate, repostion</string>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="boardCell" id="YNX-tu-oBB">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="YNX-tu-oBB" customClass="PuzzleCollectionViewCell" customModule="Gridy" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="1j7-X9-xd4">
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yc0-n6-iZw">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yc0-n6-iZw">
                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
@@ -330,34 +330,33 @@ Swipe out of the grid to undo</string>
                                     <segue destination="WiI-j7-jLE" kind="unwind" unwindAction="unwindToMenu:" id="7RA-sC-diS"/>
                                 </connections>
                             </button>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="aj5-Ao-Hd2">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="aj5-Ao-Hd2">
                                 <rect key="frame" x="16" y="101" width="288" height="112"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vxj-hj-6nA">
-                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="itemSize" width="72" height="72"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="piecesCell" id="wUh-sA-nOA">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" reuseIdentifier="Cell" id="wUh-sA-nOA" customClass="PuzzleCollectionViewCell" customModule="Gridy" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="72" height="72"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="qwP-ot-VZM">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qwP-ot-VZM">
+                                            <rect key="frame" x="0.0" y="0.0" width="72" height="72"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Wwx-L1-fbJ">
-                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C5T-bU-Ueb">
+                                                    <rect key="frame" x="0.0" y="0.0" width="72" height="72"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="Wwx-L1-fbJ" secondAttribute="bottom" id="6gE-fl-1dd"/>
-                                                <constraint firstAttribute="trailing" secondItem="Wwx-L1-fbJ" secondAttribute="trailing" id="OZp-yw-Wz9"/>
-                                                <constraint firstItem="Wwx-L1-fbJ" firstAttribute="leading" secondItem="qwP-ot-VZM" secondAttribute="leading" id="PZq-SI-5Qx"/>
-                                                <constraint firstItem="Wwx-L1-fbJ" firstAttribute="top" secondItem="qwP-ot-VZM" secondAttribute="top" id="w6F-Pg-yFP"/>
-                                            </constraints>
                                         </collectionViewCellContentView>
+                                        <size key="customSize" width="72" height="72"/>
+                                        <connections>
+                                            <outlet property="imageView" destination="C5T-bU-Ueb" id="WqK-LN-qmQ"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -405,6 +404,12 @@ Swipe out of the grid to undo</string>
                         <viewLayoutGuide key="safeArea" id="4DD-fj-Lfm"/>
                     </view>
                     <navigationItem key="navigationItem" id="HUb-XD-kM6"/>
+                    <connections>
+                        <outlet property="boardCollectionView" destination="pJL-2k-Yez" id="kJS-Di-mtT"/>
+                        <outlet property="boardCollectionViewFlowLayout" destination="vxj-hj-6nA" id="CE7-vx-fZ1"/>
+                        <outlet property="piecesCollectionView" destination="aj5-Ao-Hd2" id="Y4b-eX-qTZ"/>
+                        <outlet property="piecesCollectionViewFlowLayout" destination="L8f-D3-Ubs" id="Bhj-me-eV8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BgX-PW-hwc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="WiI-j7-jLE" userLabel="Exit" sceneMemberID="exit"/>
